<resources>
    <string name="app_name">ナニスル？</string>
    <string name="titleEdit">アクティビティ</string>
    <string name="requiredLabel">*</string>
    <string name="placeLabel">場所</string>
    <string name="memoLabel">メモ</string>
    <string name="privateLabel">公開設定</string>
    <string name="publicBtn">公開</string>
    <string name="privateBtn">非公開</string>
    <string name="saveBtn">保存</string>
    <string name="deleteBtn">削除</string>
    <string name="requiredError">入力必須です</string>
    <string name="indexLabel">アクティビティ一覧</string>
    <string name="noticeLabel">（未完/完了）スワイプで切り替え</string>
    <string name="mainText">Tap below!</string>
    <string name="appTitle">ナ ニ ス ル ？</string>
    <string name="addLabel" translatable="false">アクティビティ追加</string>
    <string name="editLabel">アクティビティ編集</string>
</resources>
